--- a/wwwroot/dbc/index.html
+++ b/wwwroot/dbc/index.html
@@ -58,6 +58,9 @@
                 <li class="nav-item">
                     <a class="nav-link" href="/mv/"><i class="fa fa-cube" aria-hidden="true"></i> Models</a>
                 </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="/builds/"><i class="fa fa-hdd-o" aria-hidden="true"></i> Builds</a>
+                </li>
             </ul>
         </div>
     </nav>
