Basic file saving

--- a/wwwroot/dbc/index.html
+++ b/wwwroot/dbc/index.html
@@ -1335,7 +1335,7 @@
     </script>
     <footer>
         <div class="container text-muted">
-            <p style='font-size: 11px'>World of Warcraft and related trademarks are registered trademarks of Blizzard Entertainment whom this site is not affiliated with. <a href='/about.php'>Privacy Policy/Open Source</a></p>
+            <p style='font-size: 11px'>World of Warcraft and related trademarks are registered trademarks of Blizzard Entertainment whom this site is not affiliated with. <a href='https://github.com/marlamin/wow.tools.local'>Open Source</a></p>
         </div>
     </footer>
 </body>
