--- a/wwwroot/files/index.html
+++ b/wwwroot/files/index.html
@@ -334,79 +334,71 @@
                     },
                     {
                         "targets": 3,
-                        "visible": false,
+                        "visible": true,
                         "orderable": false,
                         "render": function (data, type, full, meta) {
-                            if (full[3].length > 0) {
-                                if (full[3][0].enc == 1) {
-                                    var test = "<i style='color: red' title='File is encrypted (key " + full[3][0].key + " unknown)' class='fa fa-lock'></i> ";
-                                } else if (full[3][0].enc == 2) {
-                                    var test = "<i style='color: green' title='File is encrypted (key " + full[3][0].key + " is available)' class='fa fa-unlock'></i> ";
-                                } else if (full[3][0].enc == 3) {
-                                    var test = "<i style='color: yellow' title='File is encrypted (keys " + full[3][0].key + " are partially available)' class='fa fa-lock'></i> ";
-                                } else if (full[3][0].enc == 4) {
-                                    var test = "<i style='color: #7e7e7e' title='File is flagged as encrypted' class='fa fa-unlock'></i> ";
-                                } else {
-                                    var test = "";
-                                }
-                            } else {
+                            //if (full[3].length > 0) {
+                            //    if (full[3][0].enc == 1) {
+                            //        var test = "<i style='color: red' title='File is encrypted (key " + full[3][0].key + " unknown)' class='fa fa-lock'></i> ";
+                            //    } else if (full[3][0].enc == 2) {
+                            //        var test = "<i style='color: green' title='File is encrypted (key " + full[3][0].key + " is available)' class='fa fa-unlock'></i> ";
+                            //    } else if (full[3][0].enc == 3) {
+                            //        var test = "<i style='color: yellow' title='File is encrypted (keys " + full[3][0].key + " are partially available)' class='fa fa-lock'></i> ";
+                            //    } else if (full[3][0].enc == 4) {
+                            //        var test = "<i style='color: #7e7e7e' title='File is flagged as encrypted' class='fa fa-unlock'></i> ";
+                            //    } else {
+                            //        var test = "";
+                            //    }
+                            //} else {
                                 var test = "";
-                            }
+                            //}
                            
-                                if (full[3].length > 1) {
-                                    test += "<a data-toggle='collapse' href='#versions" + full[0] + "'>> Show " + full[3].length + " versions</a><div class='collapse' id='versions" + full[0] + "'>";
-                                    full[3].forEach(function (entry) {
-                                        if (full[1]) {
-                                            var filename = full[1].replace(/^.*[\\\/]/, '');
-                                        } else {
-                                            if (full[7]) {
-                                                var filename = full[7].replace(/^.*[\\\/]/, '');
-                                            } else {
-                                                var filename = full[0] + "." + full[4];
-                                            }
-                                        }
-                                        test += "<a class='fileTableDL' href='https://wow.tools/casc/file/chash?contenthash=" + entry.contenthash + "&filedataid=" + full[0] + "&buildconfig=" + entry.buildconfig + "&cdnconfig=" + entry.cdnconfig + "&filename=" + encodeURIComponent(filename) + "'>" + entry.description;
+                                //if (full[3].length > 1) {
+                                //    test += "<a data-toggle='collapse' href='#versions" + full[0] + "'>> Show " + full[3].length + " versions</a><div class='collapse' id='versions" + full[0] + "'>";
+                                //    full[3].forEach(function (entry) {
+                                //        if (full[1]) {
+                                //            var filename = full[1].replace(/^.*[\\\/]/, '');
+                                //        } else {
+                                //            if (full[7]) {
+                                //                var filename = full[7].replace(/^.*[\\\/]/, '');
+                                //            } else {
+                                //                var filename = full[0] + "." + full[4];
+                                //            }
+                                //        }
+                                //        test += "<a class='fileTableDL' href='https://wow.tools/casc/file/chash?contenthash=" + entry.contenthash + "&filedataid=" + full[0] + "&buildconfig=" + entry.buildconfig + "&cdnconfig=" + entry.cdnconfig + "&filename=" + encodeURIComponent(filename) + "'>" + entry.description;
 
-                                        if (Settings.showFileBranch) {
-                                            test += " (" + entry.branch + ")";
-                                        }
+                                //        if (Settings.showFileBranch) {
+                                //            test += " (" + entry.branch + ")";
+                                //        }
 
-                                        test += "</a>";
+                                //        test += "</a>";
 
-                                        if (entry.firstseen && entry.description == "WOW-18125patch6.0.1_Beta" && entry.firstseen != "WOW-18125patch6.0.1_Beta") {
-                                            test += "<span style='float: right'><a tabindex='0' role='button' data-trigger='hover' data-container='body' data-html='true' data-toggle='popover' data-placement='top' style='color: ;' data-content='<b>(WIP, more builds coming)</b> First seen in " + entry.firstseen + "'><i class='fa fa-archive'></i></a></span>";
-                                        }
+                                //        if (entry.firstseen && entry.description == "WOW-18125patch6.0.1_Beta" && entry.firstseen != "WOW-18125patch6.0.1_Beta") {
+                                //            test += "<span style='float: right'><a tabindex='0' role='button' data-trigger='hover' data-container='body' data-html='true' data-toggle='popover' data-placement='top' style='color: ;' data-content='<b>(WIP, more builds coming)</b> First seen in " + entry.firstseen + "'><i class='fa fa-archive'></i></a></span>";
+                                //        }
 
-                                        test += "<br>";
-                                    });
+                                //        test += "<br>";
+                                //    });
 
-                                    test += "</div>";
-                                } else if (full[3].length == 1 && full[3][0].buildconfig != null) {
+                                //    test += "</div>";
+                                //} else if (full[3].length == 1 && full[3][0].buildconfig != null) {
                                     if (full[1]) {
                                         var filename = full[1].replace(/^.*[\\\/]/, '');
                                     } else {
-                                        if (full[7]) {
-                                            var filename = full[7].replace(/^.*[\\\/]/, '');
-                                        } else {
-                                            var filename = full[0] + "." + full[4];
-                                        }
+                                        var filename = "";
                                     }
-                                    test += "<a class='fileTableDL' href='https://wow.tools/casc/file/chash?contenthash=" + full[3][0].contenthash + "&filedataid=" + full[0] + "&buildconfig=" + full[3][0].buildconfig + "&cdnconfig=" + full[3][0].cdnconfig + "&filename=" + encodeURIComponent(filename) + "'>" + full[3][0].description;
-                                    if (Settings.showFileBranch) {
-                                        test += " (" + full[3][0].branch + ")";
-                                    }
-                                    test += "</a>";
+                                    test += "<a class='fileTableDL' href='/casc/fdid?fileDataID=" + full[0] + "&filename=" + encodeURIComponent(filename) + "'>Download</a>";
 
-                                    if (full[3][0].contenthash == "de6135861a6cacfe176830f18f597c3e" || full[3][0].contenthash == "ea80e802952501021865cfeed808ac3f") {
-                                        test += "<span style='float: right'><a tabindex='0' role='button' data-trigger='hover' data-container='body' data-html='true' data-toggle='popover' data-placement='top' style='color: ;' data-content='<b>Placeholder audio</b><br> This file has no audio yet'><span class='fa-stack'><i class='fa fa-volume-off fa-stack-1x'></i><i class='fa fa-ban fa-stack-1x text-danger'></i></span></i></a></span>";
-                                    }
+                                    //if (full[3][0].contenthash == "de6135861a6cacfe176830f18f597c3e" || full[3][0].contenthash == "ea80e802952501021865cfeed808ac3f") {
+                                    //    test += "<span style='float: right'><a tabindex='0' role='button' data-trigger='hover' data-container='body' data-html='true' data-toggle='popover' data-placement='top' style='color: ;' data-content='<b>Placeholder audio</b><br> This file has no audio yet'><span class='fa-stack'><i class='fa fa-volume-off fa-stack-1x'></i><i class='fa fa-ban fa-stack-1x text-danger'></i></span></i></a></span>";
+                                    //}
 
-                                    if (full[3][0].firstseen && full[3][0].firstseen != "WOW-18125patch6.0.1_Beta") {
-                                        test += "<span style='float: right'><a tabindex='0' role='button' data-trigger='hover' data-container='body' data-html='true' data-toggle='popover' data-placement='top' style='color: ;' data-content='<b>(WIP, more builds coming)</b> First seen in " + full[3][0].firstseen + "'><i class='fa fa-archive'></i></a></span>";
-                                    }
-                                } else {
-                                    test += "No versions available";
-                                }
+                                    //if (full[3][0].firstseen && full[3][0].firstseen != "WOW-18125patch6.0.1_Beta") {
+                                    //    test += "<span style='float: right'><a tabindex='0' role='button' data-trigger='hover' data-container='body' data-html='true' data-toggle='popover' data-placement='top' style='color: ;' data-content='<b>(WIP, more builds coming)</b> First seen in " + full[3][0].firstseen + "'><i class='fa fa-archive'></i></a></span>";
+                                    //}
+                                //} else {
+                                //    test += "No versions available";
+                                //}
 
                             return test;
                         }
@@ -529,7 +521,7 @@
     </script>
     <footer>
         <div class="container text-muted">
-            <p style='font-size: 11px'>World of Warcraft and related trademarks are registered trademarks of Blizzard Entertainment whom this site is not affiliated with. <a href='/about.php'>Privacy Policy/Open Source</a></p>
+            <p style='font-size: 11px'>World of Warcraft and related trademarks are registered trademarks of Blizzard Entertainment whom this site is not affiliated with. <a href='https://github.com/marlamin/wow.tools.local'>Open Source</a></p>
         </div>
     </footer>
 </body>
